# embedded-batteries

./: CODEOWNERS  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: check.yml  nostd.yml
embedded-batteries/: Cargo.toml  README.md
embedded-batteries-async/: Cargo.toml  README.md
embedded-batteries-async/src/: charger.rs  lib.rs  smart_battery.rs
embedded-batteries/src/: acpi.rs  charger.rs  lib.rs  smart_battery.rs
