[package]
name = "embedded-batteries"
version = "0.1.0"
edition = "2021"
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
description = "A blocking Hardware Abstraction Layer (HAL) for battery fuel gauges and battery chargers used in embedded systems."
keywords = ["hal", "IO", "battery", "charging", "charger", "fuel gauge", "gas gauge", "SBS"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/OpenDevicePartnership/embedded-batteries"

[features]
defmt = ["dep:defmt"]

[dependencies]
embedded-hal = "1.0.0"
defmt = { version = "0.3", optional = true }
bitfield-struct = "0.10"
